--- a/TODO
+++ b/TODO
@@ -13,6 +13,27 @@
     При одевание меняются общие данные персанажа, которые зависят от его лвл и одеваемых вещей
 
     Так же должен учитываться бонус от комплектов шмота и оружия
+    --------------------------------------------------------------------------------------------------------------------
+
+    1. Прописать правильные бонусы для точек
+    2. Вставка магических камней
+    3. При одевании вещи с возможностью точки или вставки камней - показывать детальное окно
+    4. Учесть начальные статы каждого класса
+    5. ToolTip который геренируется от item
+    5. Дизайн
+    6. Сообщить об ошибкие - окошко
+    7. Ссылка на шмот
+
+
+2. AP калькулятор
+
+    1. Дизайн кнопок
+    2. Указать ники и изначальное AP
+    3. Ссылка на AP
+
+3. Геренатор ссылок
+
+    Нужен для генерации внутренних ссылок
 
 
 2. Переводчик
