--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@
     --------------------------------------------------------------------------------------------------------------------
 
     1. Прописать правильные бонусы для точек
+        1.1 При уменьшении точек скидываются основные обноименные параметры
     2. Вставка магических камней
     3. При одевании вещи с возможностью точки или вставки камней - показывать детальное окно
     4. Учесть начальные статы каждого класса
